--- a/client/index.html
+++ b/client/index.html
@@ -61,7 +61,7 @@
     <script src="http://connect.facebook.net/en_US/all.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      // var socket = io();
+      var socket = io();
     </script>
   </body>
   
