--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <body ng-app="AYARApp">
     <div id="fb-root"></div>
 
-    <img id="main" src="http://www.robotaton.com/images/blogbot.png" />
+    <!-- <img id="main" src="http://www.robotaton.com/images/blogbot.png" /> -->
     <div ui-view></div>
 
     <script src="lib/bower_components/angular/angular.js"></script>
@@ -18,6 +18,7 @@
     <script src="lib/bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="lib/bower_components/lodash/dist/lodash.js"></script>
     <script src="lib/bower_components/restangular/src/restangular.js"></script>
+    <script src="lib/bower_components/angular-socket-io/socket.js"></script>
 
     <script src="app/app.js"></script>
     <script src="app/homepage/homepage.controller.js"></script>
