Moves factory logic into its own folder.

--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,8 @@
     <script src="app/game/game.panel.waitingForResponses/game.panel.waitingForResponses.controller.js"></script>
     <script src="app/game/game.panel.waitingForResponses/game.panel.waitingForResponses.js"></script>
 
+    <script src="app/game/sockets.factory.js"></script>
+
     <script src="http://connect.facebook.net/en_US/all.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
